--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@k03mad/simple-date": "1.0.0",
     "@k03mad/simple-log": "2.1.0",
+    "chalk": "5.3.0",
+    "compression": "1.7.4",
+    "express": "4.18.2",
+    "helmet": "7.1.0",
+    "morgan": "1.10.0",
     "prom-client": "15.1.0"
   },
   "devDependencies": {
