--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clean": "npm run clean:modules && npm run clean:eslint:cache",
     "clean:modules": "rm -rf ./node_modules || true",
     "clean:eslint:cache": "rm -rf .eslintcache || true",
-    "setup": "npm run clean && npm i",
+    "setup": "npm run clean && pnpm i",
     "prepare": "husky install || true"
   }
 }
