--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "prom-client": "15.1.0"
   },
   "devDependencies": {
-    "@k03mad/eslint-config": "19.4.0",
+    "@k03mad/eslint-config": "20.2.0",
     "eslint": "8.56.0",
-    "husky": "8.0.3"
+    "husky": "9.0.5"
   },
   "scripts": {
     "lint": "npm run lint:eslint",
@@ -37,6 +37,6 @@
     "clean:modules": "rm -rf ./node_modules || true",
     "clean:eslint:cache": "rm -rf .eslintcache || true",
     "setup": "npm run clean && pnpm i",
-    "prepare": "husky install || true"
+    "prepare": "husky || true"
   }
 }
