--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@k03mad/simple-prom",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Simple prom-client library",
   "maintainers": [
     "Kirill Molchanov <k03.mad@gmail.com"
@@ -36,7 +36,7 @@
     "clean": "npm run clean:modules && npm run clean:eslint:cache",
     "clean:modules": "rm -rf ./node_modules || true",
     "clean:eslint:cache": "rm -rf .eslintcache || true",
-    "setup": "npm run clean && pnpm i",
+    "setup": "npm run clean && npm i pnpm -g && pnpm i",
     "prepare": "husky || true"
   }
 }
