--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,9 +5,12 @@ on:
     branches:
       - master
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish:
-    environment: npm
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
