--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,5 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.json]
-indent_size = 2
-
-[*.{yml,yaml}]
+[*.{json,yml,yaml}]
 indent_size = 2
