--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,10 +5,10 @@ updates:
     schedule:
       interval: monthly
     assignees:
-      - "k03mad"
+      - 'k03mad'
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: monthly
     assignees:
-      - "k03mad"
+      - 'k03mad'
